crates/cpg-schema/tests/snapshots/contracts__exports.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table exports
family exports
key snapshot_id, access_path, public_fact_id
@lctx.family=exports
@lctx.table=exports
snapshot_id: FixedSizeBinary(16) NOT NULL
access_path: Utf8 NOT NULL
export_node_id: FixedSizeBinary(16) NOT NULL
declaration_node_id: FixedSizeBinary(16) NULL
external_node_id: FixedSizeBinary(16) NULL
public_fact_id: FixedSizeBinary(16) NOT NULL
declaration_fact_id: FixedSizeBinary(16) NULL
reason: Int16 NULL [lctx.codebook=boundary_reason]
