crates/cpg-schema/tests/snapshots/contracts__expression_evaluation_steps.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table expression_evaluation_steps
family findings
key snapshot_id, syntax_fact_id, ordinal
check ordinal_nonnegative: ordinal >= 0
check known: status <> 2
@lctx.family=findings
@lctx.table=expression_evaluation_steps
snapshot_id: FixedSizeBinary(16) NOT NULL
syntax_fact_id: FixedSizeBinary(16) NOT NULL
ordinal: Int64 NOT NULL
operand_fact_id: FixedSizeBinary(16) NOT NULL
evidence_id: FixedSizeBinary(16) NOT NULL
status: Int16 NOT NULL [lctx.codebook=modeled_argument_evaluation_status]
kind: Int16 NOT NULL [lctx.codebook=summary_flow_step_kind]
