crates/cpg-schema/tests/snapshots/contracts__field_accesses.snap
---
source: crates/cpg-schema/tests/contracts.rs
expression: text
---
table field_accesses
family findings
key snapshot_id, module_node_id, start_byte, end_byte, write
check span_order: end_byte >= start_byte
@lctx.family=findings
@lctx.table=field_accesses
snapshot_id: FixedSizeBinary(16) NOT NULL
field: Utf8 NOT NULL
write: Boolean NOT NULL
receiver_self: Boolean NOT NULL
class_node_id: FixedSizeBinary(16) NULL
function_node_id: FixedSizeBinary(16) NULL
module_node_id: FixedSizeBinary(16) NOT NULL
start_byte: Int64 NOT NULL
end_byte: Int64 NOT NULL
place: Utf8 NOT NULL
condition_id: FixedSizeBinary(16) NOT NULL
condition: Utf8 NOT NULL
